--- a/GenerateSite/app/templates/base.html
+++ b/GenerateSite/app/templates/base.html
@@ -5,7 +5,7 @@
 {{ moment.include_moment() }}
 {% endblock %}
 
-{% block title %}Matter{% endblock %}
+{% block title %}Generate{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Matter</a>
+            <a class="navbar-brand" href="/">Generate Manager</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
